added the about country (more info on country page), also fixed soem issues on the responsiveness.

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
 
 .App {
   margin: 0 auto;
-  width: 90%;
+  width: 95%;
   /*  */
   display: flex;
   min-height: 100vh;
@@ -84,19 +84,14 @@ nav {
 /* country row and country */
 .country--row {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   justify-items: center;
-  align-items: center;
-  gap: 3rem;
+  align-items: start;
+  gap: 8rem;
 }
 .country {
-  max-width: 34rem;
+  height: 100%;
   overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1.2rem;
   box-shadow: 0 1.5px 14px rgba(15, 10, 34, 0.381);
   padding-bottom: 1.5rem;
   border-radius: 1rem;
@@ -104,18 +99,17 @@ nav {
 .country:hover .country--img {
   transform: scale(1.08);
 }
-.country--image {
-  width: 100%;
-  overflow: hidden;
-}
 .country--img {
   transition: 0.8s;
+  object-fit: cover;
+  width: 100%;
+  height: 50% !important;
+  border-radius: 8px 8px 0 0;
 }
 .country--context {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  align-self: flex-start;
   padding: 1.2rem 2rem;
 }
 .country--name {
@@ -123,10 +117,6 @@ nav {
   color: #ffff;
   text-transform: uppercase;
   letter-spacing: -1.2px;
-}
-.country--border {
-  word-break: break-all;
-  line-height: 1.2;
 }
 
 /*  */
@@ -156,8 +146,51 @@ nav {
   bottom: 4%;
   right: 3%;
 }
+/*  */
+.about--row {
+  padding: 0 3rem;
+  display: grid;
+  grid-template-columns: 2fr 2.5fr;
+  align-items: center;
+  justify-items: end;
+}
+.about--country--context {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+}
+.country--coat--of--arm {
+  width: 40px;
+}
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+@media screen and (max-width: 1318px) {
+  .country--row {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 976px) {
+  .country--row {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 768px) {
+  .about--row {
+    grid-template-columns: 1fr;
+    justify-items: start;
+    gap: 2rem;
+  }
+  .about--country--img {
+    max-width: 500px;
+  }
+}
 @media screen and (max-width: 576px) {
   .country--row {
+    padding: 0 2rem;
     grid-template-columns: 1fr;
   }
   nav {
@@ -168,6 +201,6 @@ nav {
     width: 98%;
   }
   .search--country--form {
-    max-width: 98%;
+    max-width: 75%;
   }
 }
